xmppbots - Use G1 GC in JDK7, and a whole host of other optimization flags. Much longer GC pauses, but at least it doesn't hide behind a tree and cry on ZeroMQ PUBLISH stress.